# Evolution-Of-Todo

./: README.md  pyproject.toml  requirements.txt  test_backend_structure_v2.py
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
backend/: alembic.ini  requirements.txt
backend/src/: config.py  logging.py  main.py
backend/src/models/: todo.py
backend/src/routes/: user.py
backend/src/services/: user_service.py
backend/tests/contract/: test_tasks.py
backend/tests/unit/: test_task_service.py
frontend/: package-lock.json  tailwind.config.js
frontend/src/components/: Button.jsx  FloatingActionButton.jsx  TodoInput.jsx  TodoModel.jsx
frontend/src/pages/: add-task.jsx  login.jsx  todo-list.jsx
frontend/src/utils/: auth.js
history/prompts/console-todo-app/: 1-create-implementation-plan.plan.prompt.md  1-execute-implementation-plan.green.prompt.md  1-generate-tasks.tasks.prompt.md  1-implement-project.green.prompt.md  (+1 more)
phase-2/: .gitignore  final_constitution.md  test_backend_final.py  test_backend_structure.py  updated_constitution.md
phase-2/backend/: create_db.py  dockerfile  main.py  migrate_todos.py
phase-2/frontend/: next.config.js  package.json
specs/001-fullstack-todo-app/: plan.md  research.md
specs/1-console-todo-app/: plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: README.md  main.py
src/lib/: utils.py
src/models/: task.py
tests/contract/: test_cli_contract.py
tests/integration/: test_todo_integration.py
tests/unit/: test_task.py  test_todo_service.py
(+40 files in other folders)
